fix HMAC resource path